--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.BIAtest" parent="android:Theme.Material.Light.NoActionBar.Fullscreen" />
+    <style name="Theme.BIAtest" parent="android:Theme.Material.Light.NoActionBar.Fullscreen">
+        <item name="android:statusBarColor">@color/black</item>
+    </style>
+
 </resources>
